# analogpuddle.cloud

./: .ansible-lint  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ansible.yml  octodns.yml  pre-commit.yml  pulumi-preview.yml  test.yml
ansible/: inventory.yml  site.yml
ansible/roles/logtail/defaults/: main.yml
ansible/roles/logtail/handlers/: main.yml
ansible/roles/logtail/meta/: main.yml
ansible/roles/logtail/tasks/: main.yml
ansible/roles/logtail/tests/: test.yml
ansible/roles/logtail/vars/: main.yml
docs/: CNAME  index.html
octodns/config/: analogpuddle.cloud.yaml  config.yaml
pulumi/: Pulumi.yaml  __main__.py  config.py  constants.py
