[tool.poetry]
name = "analogpuddle.cloud"
version = "0.1.0"
description = ""
authors = ["Mark Mercado <mamercad@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
octodns = "0.9.17"
octodns-digitalocean = "0.0.2"
pulumi-digitalocean = "^4.14.0"
pulumi = "^3.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
